# tensorrt_yolo_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/tensorrt_yolo/: ObjectBoundingBox.h  TensorrtYolo.h  TensorrtYoloNode.h
launch/: tensorrt_yolo.launch
models/: coco_classes.txt
src/: TensorrtYolo.cpp  TensorrtYoloNode.cpp  main.cpp
